--- a/Attempt2/nbproject/project.properties
+++ b/Attempt2/nbproject/project.properties
@@ -35,8 +35,18 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Attempt2
 endorsed.classpath=
 excludes=
-file.reference.controlsfx-11.1.2.jar=jars/controlsfx-11.1.2.jar
+file.reference.ant-1.10.12.jar=jars/ant-1.10.12.jar
+file.reference.ant-launcher-1.10.12.jar=jars/ant-launcher-1.10.12.jar
+file.reference.commons-codec-1.15.jar=jars/commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=jars/commons-collections4-4.4.jar
+file.reference.commons-compress-1.19.jar=jars/commons-compress-1.19.jar
+file.reference.commons-compress-1.21.jar=jars/commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=jars/commons-io-2.11.0.jar
+file.reference.commons-math3-3.6.1.jar=jars/commons-math3-3.6.1.jar
+file.reference.controlsfx-11.1.2.jar=C:\\Users\\ashre\\Downloads\\controlsfx-11.1.2.jar
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\controlsfx-8.40.11.jar
 file.reference.core-3.3.0.jar-1=jars/core-3.3.0.jar
+file.reference.core-3.5.1.jar=jars/core-3.5.1.jar
 file.reference.fontawesomefx-8.9.jar=jars/fontawesomefx-8.9.jar
 file.reference.fontawesomefx-commons-8.15.jar=jars/fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-commons-9.1.2.jar=jars/fontawesomefx-commons-9.1.2.jar
@@ -52,6 +62,12 @@ file.reference.fontawesomefx-octicons-4.3.0-5.jar=jars/fontawesomefx-octicons-4.
 file.reference.fontawesomefx-weathericons-2.0.10-5.jar=jars/fontawesomefx-weathericons-2.0.10-5.jar
 file.reference.gson-2.10.1.jar-1=jars/gson-2.10.1.jar
 file.reference.itextpdf-5.5.13.3.jar-1=jars/itextpdf-5.5.13.3.jar
+file.reference.javafx-base-19-ea_10-loongson64-linux.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\javafx-base-19-ea+10-loongson64-linux.jar
+file.reference.javafx-base-19-ea_10-loongson64.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\javafx-base-19-ea+10-loongson64.jar
+file.reference.javafx-graphics-19-ea_10-loongson64-linux.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\javafx-graphics-19-ea+10-loongson64-linux.jar
+file.reference.javafx-graphics-19-ea_10-loongson64.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\javafx-graphics-19-ea+10-loongson64.jar
+file.reference.javafx-media-19-ea_10-loongson64-linux.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\javafx-media-19-ea+10-loongson64-linux.jar
+file.reference.javafx-media-19-ea_10-loongson64.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\javafx-media-19-ea+10-loongson64.jar
 file.reference.javafx-swt.jar=jars/javafx-swt.jar
 file.reference.javafx.base.jar=jars/javafx.base.jar
 file.reference.javafx.controls.jar=jars/javafx.controls.jar
@@ -65,15 +81,32 @@ file.reference.javax.mail.jar=jars/javax.mail.jar
 file.reference.jfoenix-8.0.10.jar=jars/jfoenix-8.0.10.jar
 file.reference.jfoenix-9.0.10.jar=jars/jfoenix-9.0.10.jar
 file.reference.mysql-connector-j-8.0.32.jar-2=jars/mysql-connector-j-8.0.32.jar
+file.reference.poi-4.1.2.jar=jars\\poi-4.1.2.jar
+file.reference.poi-examples-4.1.2.jar=jars\\poi-examples-4.1.2.jar
+file.reference.poi-excelant-4.1.2.jar=jars\\poi-excelant-4.1.2.jar
+file.reference.poi-ooxml-4.1.2.jar=jars\\poi-ooxml-4.1.2.jar
+file.reference.poi-ooxml-schemas-4.1.2.jar=jars\\poi-ooxml-schemas-4.1.2.jar
+file.reference.poi-scratchpad-4.1.2.jar=jars\\poi-scratchpad-4.1.2.jar
+file.reference.qrgen-1.2.jar=jars\\qrgen-1.2.jar
+file.reference.qrgen-1.4.jar=jars\\qrgen-1.4.jar
+file.reference.SparseBitSet-1.2.jar=jars/SparseBitSet-1.2.jar
 file.reference.stripe-java-22.10.0.jar-1=jars/stripe-java-22.10.0.jar
+file.reference.twilio-7.55.0-jar-with-dependencies.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\jarna\\twilio-7.55.0-jar-with-dependencies.jar
+file.reference.xmlbeans-3.1.0.jar=jars\\xmlbeans-3.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.controlsfx-11.1.2.jar}:\
-    ${file.reference.controlsfx-11.1.2.jar}:\
-    ${file.reference.core-3.3.0.jar-1}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.ant-1.10.12.jar}:\
+    ${file.reference.ant-launcher-1.10.12.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
     ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
@@ -132,7 +165,29 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.10.jar}:\
     ${file.reference.jfoenix-9.0.10.jar}:\
     ${file.reference.mysql-connector-j-8.0.32.jar-2}:\
-    ${file.reference.stripe-java-22.10.0.jar-1}
+    ${file.reference.stripe-java-22.10.0.jar-1}:\
+    ${file.reference.poi-4.1.2.jar}:\
+    ${file.reference.poi-examples-4.1.2.jar}:\
+    ${file.reference.poi-excelant-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
+    ${file.reference.poi-scratchpad-4.1.2.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.core-3.5.1.jar}:\
+    ${file.reference.qrgen-1.2.jar}:\
+    ${file.reference.qrgen-1.4.jar}:\
+    ${file.reference.controlsfx-11.1.2.jar}:\
+    ${file.reference.javafx-base-19-ea_10-loongson64-linux.jar}:\
+    ${file.reference.javafx-base-19-ea_10-loongson64.jar}:\
+    ${file.reference.javafx-graphics-19-ea_10-loongson64-linux.jar}:\
+    ${file.reference.javafx-graphics-19-ea_10-loongson64.jar}:\
+    ${file.reference.javafx-media-19-ea_10-loongson64-linux.jar}:\
+    ${file.reference.javafx-media-19-ea_10-loongson64.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.twilio-7.55.0-jar-with-dependencies.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -193,10 +248,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\javafx-sdk-19.0.2.1\\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics
+run.jvmargs=--module-path "C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
